Fixed form-group spacing, minor tweak in form title

--- a/app/less/ngform-builder.less
+++ b/app/less/ngform-builder.less
@@ -36,6 +36,9 @@
         background-color: #E2E2E2;
     }
 }
+.form-group {
+  margin-bottom: 5px;
+}
 .accordion-edit div, .field div {
     line-height: 35px;
 }
